# mrender

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: camera.cppm  color.cppm  framebuffer.cppm  main.cpp  material.cppm  mrender.cppm  object.cppm  output.cppm  ray.cppm  render.cppm  sample.cppm  scene.cppm  term.cppm  vector.cppm
